apps/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: linuxserver/sonarr@sha256:49a8e636fd4514b23d37c84660101fecbb632174ba0569e0f09bbd2659a2a925
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: config-volume
              mountPath: /config
              subPath: sonarr
            - name: media-volume
              mountPath: /media/sonarr
              subPath: media/sonarr
            - name: media-volume
              mountPath: /downloads/sonarr
              subPath: public/downloads/sonarr
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: nfs-pvc
        - name: media-volume
          persistentVolumeClaim:
            claimName: media-pvc
